上传student的excel文件并导入数据库

--- a/pom.xml
+++ b/pom.xml
@@ -196,6 +196,13 @@
             <artifactId>spring-boot-test</artifactId>
         </dependency>
 
+        <!-- 处理excel -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>2.2.7</version>
+        </dependency>
+
     </dependencies>
 
     <build>
