'修改数据库时区设置'

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,18 +1,18 @@
 
-# ²âÊÔ»·¾³
+# ï¿½ï¿½ï¿½Ô»ï¿½ï¿½ï¿½
 
-# Ó¦ÓÃÃû³Æ
+# Ó¦ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 spring.application.name=followup-server-test-process
 
-# ·ÃÎÊ¶Ë¿ÚºÅ
+# ï¿½ï¿½ï¿½Ê¶Ë¿Úºï¿½
 server.port=8013
 
-# ±àÂë¸ñÊ½
+# ï¿½ï¿½ï¿½ï¿½ï¿½Ê½
 server.tomcat.uri-encoding=utf-8
 
-# Êı¾İ¿âÏà¹ØÅäÖÃ
+# ï¿½ï¿½ï¿½İ¿ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://115.29.151.221:3306/followup_test
+spring.datasource.url=jdbc:mysql://115.29.151.221:3306/followup_test?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=GMT%2b8
 spring.datasource.username=followup
 spring.datasource.password=Epic,2019
 spring.datasource.max-idle=10
@@ -20,24 +20,24 @@ spring.datasource.max-wait=10000
 spring.datasource.min-idle=5
 spring.datasource.initial-size=5
 spring.datasource.druid.connection-init-sqls=set names utf8mb4
-# ×Ô¶¯¸üĞÂ±í
+# ï¿½Ô¶ï¿½ï¿½ï¿½ï¿½Â±ï¿½
 spring.jpa.hibernate.ddl-auto=update
-# Ìí¼ÓÍâ¼üÔ¼Êø
+# ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ô¼ï¿½ï¿½
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDialect
 
-# sessionÉúÃüÖÜÆÚ
+# sessionï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 server.servlet.session.timeout=30m
 
-# ÎÄ¼ş´óĞ¡ÏŞÖÆ
+# ï¿½Ä¼ï¿½ï¿½ï¿½Ğ¡ï¿½ï¿½ï¿½ï¿½
 server.tomcat.max-http-post-size=-1
 
 spring.servlet.multipart.enabled = true
-# Single file max size  ¼´µ¥¸öÎÄ¼ş´óĞ¡ 50MB
+# Single file max size  ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ä¼ï¿½ï¿½ï¿½Ğ¡ 50MB
 spring.servlet.multipart.max-file-size = 52428800
-# All files max size      ¼´×ÜÉÏ´«µÄÊı¾İ´óĞ¡
+# All files max size      ï¿½ï¿½ï¿½ï¿½ï¿½Ï´ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½İ´ï¿½Ğ¡
 spring.servlet.multipart.max-request-size = 52428800
 
-# ÈÕÖ¾ÅäÖÃ
+# ï¿½ï¿½Ö¾ï¿½ï¿½ï¿½ï¿½
 logging.config=classpath:log4j2.xml
 #logging.level.org.springframework=INFO
 
@@ -48,11 +48,11 @@ spring.jpa.properties.hibernate.show_sql=true
 #upload-path=D:/supload/
 #spring.resources.static-locations=classpath:/METAINF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:${upload-path}
 
-# mybatisÅäÖÃ ÅäÖÃ mapper
+# mybatisï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ mapper
 #mybatis.config-location=classpath:mybatis/mybatis-config.xml
 #mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 
-# ²âÊÔÊ±½ûÓÃ
+# ï¿½ï¿½ï¿½ï¿½Ê±ï¿½ï¿½ï¿½ï¿½
 # spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.jdbc.DataSourceTransactionManagerAutoConfiguration
 
 
