--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ server.tomcat.uri-encoding=utf-8
 # 数据库相关配置
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://101.132.192.66:3306/followup # aiwac
-spring.datasource.url=jdbc:mysql://115.29.151.221:3306/followup
+spring.datasource.url=jdbc:mysql://115.29.151.221:3306/followup?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=GMT%2b8
 spring.datasource.username=followup
 spring.datasource.password=Epic,2019
 spring.datasource.max-idle=10
