保存日记的时候增加了判断是否含有自杀倾向

--- a/src/main/resources/wechat.properties
+++ b/src/main/resources/wechat.properties
@@ -22,6 +22,9 @@ followup.maxScore = 4
 # 知识图谱问答
 followup.guoguang = http://127.0.0.1:8081/chartRobot
 
+#日记保存是否有自杀情况
+followup.isZisha = http://cmas2020.cn:8081/diaryDetect
+
 # 睡眠平台接口
 #followup.sumianUrl = https://sdapi-test.sumian.com
 followup.sumianUrl = https://sdapi.sumian.com
