修改了自杀情况的url

--- a/src/main/resources/wechat.properties
+++ b/src/main/resources/wechat.properties
@@ -23,7 +23,7 @@ followup.maxScore = 4
 followup.guoguang = http://127.0.0.1:8081/chartRobot
 
 #日记保存是否有自杀情况
-followup.isZisha = http://cmas2020.cn:8081/diaryDetect
+followup.isZisha = http://127.0.0.1:8081/diaryDetect
 
 # 睡眠平台接口
 #followup.sumianUrl = https://sdapi-test.sumian.com
