算法部分（还没改完）

--- a/src/main/resources/wechat.properties
+++ b/src/main/resources/wechat.properties
@@ -20,7 +20,7 @@ followup.answerNums = 20
 followup.maxScore = 4
 
 # 知识图谱问答
-followup.guoguang = http://127.0.0.1:8081/chartRobot
+followup.guoguang = http://127.0.0.1:8081/chatRobot
 
 #日记保存是否有自杀情况
 followup.isZisha = http://127.0.0.1:8081/diaryDetect
