增加了老服务器和新服务器后台代码需要改的地方

--- a/src/main/resources/wechat.properties
+++ b/src/main/resources/wechat.properties
@@ -20,9 +20,11 @@ followup.answerNums = 20
 followup.maxScore = 4
 
 # 知识图谱问答
+#followup.guoguang = http://follwup-test.cmas2020.cn:8081/chatRobot
 followup.guoguang = http://127.0.0.1:8081/chatRobot
 
 #日记保存是否有自杀情况
+#followup.isZisha = http://follwup-test.cmas2020.cn:8081/diaryDetect
 followup.isZisha = http://127.0.0.1:8081/diaryDetect
 
 # 睡眠平台接口
