新增了图文信息的获取（反射）

--- a/src/main/resources/wechat.properties
+++ b/src/main/resources/wechat.properties
@@ -1,10 +1,13 @@
 followup.appSecert = 75c97f949deca5fe1e04a872c9c3781e
 followup.appID = wxf308f14b24473080
 
-
 # 公众号
 followup.officialSecert = 045021cff74e88ebce5841e48023e321
 followup.officialID = wx3213c681fb752c01
+
+# 新公众号
+followup.mas_appSecert = 66f59b960fff718a3f93d4d6169ce845
+followup.mas_appID = wx4e90e883677c32ba
 
 followup.grantType = authorization_code
 
