--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jackson.version>2.9.2</jackson.version>
+        <log4j2.version>2.16.0</log4j2.version>
     </properties>
 
     <parent>
